Adds copyright notices to pvq files (no code changes)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 == Daala project contributors ==
 
 Timothy B. Terriberry	- Original development, Maintainer
+Jean-Marc Valin         - New/experimental development
 
