Relicense everything as 2-clause BSD.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
 == Daala project contributors ==
 
+Nathan E. Egge
+Ralph Giles
+Gregory F. Maxwell
+Christopher "Monty" Montgomery
 Timothy B. Terriberry	- Original development, Maintainer
 Jean-Marc Valin         - New/experimental development
-
