--- a/doc/pvq_encoding.lyx
+++ b/doc/pvq_encoding.lyx
@@ -64,7 +64,8 @@ PVQ Encoding with Non-Uniform Distribution
 \end_layout
 
 \begin_layout Author
-Jean-Marc Valin
+Jean-Marc Valin, Timothy B.
+ Terriberry
 \end_layout
 
 \begin_layout Section
@@ -225,9 +226,9 @@ The coefficient magnitude (CM) model is based on the expected absolute value
 
 \begin_layout Standard
 \begin_inset Formula 
-\[
+\begin{equation}
 \sigma_{i}=E\left\{ \left|y_{i}\right|\right\} =\sum_{k=0}^{\infty}p_{i}(k)\ ,
-\]
+\end{equation}
 
 \end_inset
 
@@ -254,9 +255,9 @@ where
 
  follows a Laplace distribution
 \begin_inset Formula 
-\[
+\begin{equation}
 p\left(x\right)=r^{-\left|x\right|}\ .
-\]
+\end{equation}
 
 \end_inset
 
@@ -266,12 +267,12 @@ Assuming the positive quantization thresholds are
 
 , we have
 \begin_inset Formula 
-\[
+\begin{equation}
 p\left(k\right)=\left\{ \begin{array}{ll}
-1-r^{\theta} & ,k=0\\
-r^{\theta}\left(1-r\right)r^{k-1}\quad & ,k\neq0
+1-r^{\theta} & ,\ k=0\\
+r^{\theta}\left(1-r\right)r^{k-1}\quad & ,\ k\neq0
 \end{array}\right.\ .
-\]
+\end{equation}
 
 \end_inset
 
@@ -300,8 +301,8 @@ r=\frac{\sigma_{i}}{1+\sigma_{i}}\ .\label{eq:r-vs-sigma}
 
 \end_inset
 
-We can still use a more typical 
-\begin_inset Formula $\theta=1/2$
+We can still use 
+\begin_inset Formula $\theta\neq1$
 \end_inset
 
  to model 
@@ -320,6 +321,15 @@ reference "eq:r-vs-sigma"
 \end_inset
 
  becomes an approximation.
+ Typically, 
+\begin_inset Formula $\theta$
+\end_inset
+
+ is in the range 
+\begin_inset Formula $\left[\frac{1}{2},1\right]$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Standard
@@ -342,9 +352,9 @@ If all values
 
  are in decreasing order of expected value and make the approximation 
 \begin_inset Formula 
-\[
-\sigma_{0}=\alpha K/N
-\]
+\begin{equation}
+\sigma_{0}=\alpha K/N\ ,
+\end{equation}
 
 \end_inset
 
@@ -356,7 +366,7 @@ where
 \begin_inset Formula $\alpha=1$
 \end_inset
 
- corresponds to ideical distributions).
+ corresponds to identical distributions).
  Knowing 
 \begin_inset Formula $\alpha$
 \end_inset
@@ -388,10 +398,10 @@ where
 
  using
 \begin_inset Formula 
-\begin{align*}
-N^{\left(1\right)} & =N-1\\
+\begin{align}
+N^{\left(1\right)} & =N-1\nonumber \\
 K^{\left(1\right)} & =K-\left|y_{0}\right|\ .
-\end{align*}
+\end{align}
 
 \end_inset
 
@@ -460,23 +470,31 @@ reference "sub:Coefficient-model"
 \begin_inset Formula $\mathbf{y}$
 \end_inset
 
-, as an exponential distribution
+, as a truncated exponential distribution
 \begin_inset Formula 
 \[
-q(n)=r^{-n}\ .
+q\left(n\right)=C_{1}\left\{ \begin{array}{ll}
+r^{-n}\quad & ,\ n<N\\
+0 & ,\ n\geq N
+\end{array}\right.\ ,
 \]
 
 \end_inset
 
-We then model the expected value of 
+where 
+\begin_inset Formula $C_{1}$
+\end_inset
+
+is a normalization constant.
+ We then model the expected value of 
 \begin_inset Formula $q(n)$
 \end_inset
 
  as 
 \begin_inset Formula 
-\[
-E\left[q\left(n\right)\right]=\beta\cdot\frac{N}{K}\ ,
-\]
+\begin{equation}
+\sigma_{n}=E\left[q\left(n\right)\right]=\beta\cdot\frac{N}{K}\ ,
+\end{equation}
 
 \end_inset
 
@@ -490,17 +508,70 @@ where
 \end_inset
 
 ).
- Once the position 
+ 
+\end_layout
+
+\begin_layout Standard
+The relationship between 
+\begin_inset Formula $\sigma_{n}$
+\end_inset
+
+ and 
+\begin_inset Formula $r$
+\end_inset
+
+ is given by
+\begin_inset Formula 
+\[
+\sigma_{n}=\frac{r^{N}-Nr+N-1}{r^{N-1}\left(1-r\right)^{N}}\ ,
+\]
+
+\end_inset
+
+so computing 
+\begin_inset Formula $r$
+\end_inset
+
+ from 
+\family roman
+\series medium
+\shape up
+\size normal
+\emph off
+\bar no
+\strikeout off
+\uuline off
+\uwave off
+\noun off
+\color none
+
+\begin_inset Formula $\sigma_{n}$
+\end_inset
+
+ is not easy.
+ We use the approximation 
+\begin_inset Formula 
+\[
+r\approx\frac{\sigma_{n}}{1+\sigma_{n}}+\frac{8\sigma_{n}^{2}}{\left(N+1\right)\left(N-1\right)^{2}}\ .
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Once the position 
 \begin_inset Formula $n$
 \end_inset
 
  of the first non-zero coefficient is coded, one pulse is subtracted from
  that position and the process is restarted with
 \begin_inset Formula 
-\begin{align*}
-N^{(1)} & =N-n\\
+\begin{align}
+N^{(1)} & =N-n\nonumber \\
 K^{(1)} & =K-1\ .
-\end{align*}
+\end{align}
 
 \end_inset
 
@@ -514,12 +585,13 @@ Because the sign is fixed once  a pulse is already present at a certain
  position, the probability of adding a pulse is divided by two.
  The distribution then becomes
 \begin_inset Formula 
-\[
-q(n)=\left\{ \begin{array}{ll}
+\begin{equation}
+q(n)=C_{2}\left\{ \begin{array}{ll}
 1/2\quad & ,\ n=0\\
-r^{-n} & ,\ n\neq0
+r^{-n} & ,\ 0<n<N\\
+0 & ,\ n\geq N
 \end{array}\right..
-\]
+\end{equation}
 
 \end_inset
 
@@ -556,6 +628,16 @@ It is possible to combine the CM and RL models to improve coding performance
 .
  The decoder has access to the same information and can thus choose the
  same model as the encoder.
+ It is even possible to use both models on the same vector, switching from
+ from CM to RL once 
+\begin_inset Formula $K^{\left(n\right)}$
+\end_inset
+
+ becomes smaller than an encoder-decoder-agreed threshold 
+\begin_inset Formula $K_{T}$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Section
@@ -567,8 +649,31 @@ In some contexts, the value of
 \begin_inset Formula $K$
 \end_inset
 
- will already be known.
- If not, 
+ is agreed on between the encoder and decoder.
+ If not, then we need to code 
+\begin_inset Formula $K$
+\end_inset
+
+ explicitly.
+ In the proposed implementation, the pdf of 
+\begin_inset Formula $K$
+\end_inset
+
+ is adapted based on the data for 
+\begin_inset Formula $K<15$
+\end_inset
+
+.
+ For 
+\begin_inset Formula $K\geq15$
+\end_inset
+
+, an exponentially-decaying distribution is assumed.
+ The model is also conditioned on the expected value of 
+\begin_inset Formula $K$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Bibliography
@@ -588,9 +693,9 @@ A Pyramid Vector Quantizer
 \begin_inset Quotes erd
 \end_inset
 
-, 
+, in
 \emph on
-in IEEE Trans.
+ IEEE Trans.
  on Information Theory
 \emph default
 , Vol.
@@ -619,9 +724,9 @@ Wideband Coding of Speech Using a Scalable Pulse Codebook,
 \begin_inset Quotes erd
 \end_inset
 
- 
+ in
 \emph on
-in Proc.
+ Proc.
  IEEE Workshop on Speech Coding
 \emph default
 , 2000, pp.
