Update AUTHORS after the code party.
These are the names of all the new people who contributed patches
 last week.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,17 @@
 == Daala project contributors ==
 
+Ben Brittain
+Broos <brooss.teambb@gmail.com>
+Nick Desaulniers
 Nathan E. Egge
 Ralph Giles
+Cullen Jennings
 Gregory F. Maxwell
+Jack Moffitt
 Christopher "Monty" Montgomery
-Timothy B. Terriberry	- Original development, Maintainer
-Jean-Marc Valin         - New/experimental development
+Suhas Nandakumar
+Eric Rescorla
+David Richards
+David Schleef
+Timothy B. Terriberry
+Jean-Marc Valin
